mensaje de despedida xdxd

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,10 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 34
     buildToolsVersion "30.0.3"
+
+    namespace = "com.elpunto.app"
 
     defaultConfig {
         applicationId "com.elpunto.app"
@@ -42,7 +44,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.google.code.gson:gson:2.8.7'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
